# secboard

./: Cargo.toml  README.md
src/: lib.rs  main.rs
src/sb_clipboard/: io.rs  mod.rs  tests.rs
src/sb_config/: mod.rs
src/sb_crypto/: data.rs  key.rs  mod.rs  tests.rs
src/sb_paths/: mod.rs  tests.rs
src/sb_util/: mod.rs  paths.rs  tests.rs
