[package]
name = "secboard"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes-gcm = "0.10.3"
pbkdf2 = "0.12.2"
rand = "0.8.5"
sha2 = "0.10.8"
uuid = { version = "1.4.1", features = ["v4", "fast-rng"] }
